--- a/app/src/main/res/layout/activity_decorate_mode.xml
+++ b/app/src/main/res/layout/activity_decorate_mode.xml
@@ -23,7 +23,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Espresso    2.00$"
+            android:text="珍珠奶茶    2.00$"
             />
 
         <RadioButton
@@ -31,7 +31,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="HouseBlend    3.00$"
+            android:text="蒙古奶茶    3.00$"
             />
 
     </RadioGroup>
@@ -53,7 +53,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="60dp"
-            android:text="Mocha    0.5$"
+            android:text="奶    0.5$"
             />
 
         <CheckBox
@@ -61,7 +61,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="60dp"
-            android:text="Sugar    0.8$"
+            android:text="糖    0.8$"
             />
 
     </LinearLayout>
